fixed navbar to top, better navbar spacing

--- a/css/site.css
+++ b/css/site.css
@@ -17,7 +17,14 @@ body {
 .page-title {
 	font-size: 50px;
 	font-weight: bold;
-	margin: 50px 0 30px 0;
+	margin: 120px 0 30px 0;
+}
+
+/* Adjust the top margin when fixed navbar is deactivated and navbar menu is displayed */
+@media (max-width: 980px) {
+	.page-title {
+		margin-top: 40px;
+	}
 }
 
 p {
@@ -64,7 +71,15 @@ p {
 }
 
 #logo {
+	margin-top: 80px;
 	margin-bottom: 40px;
+}
+
+/* Adjust the top margin when fixed navbar is deactivated and navbar menu is displayed */
+@media (max-width: 980px) {
+	#logo {
+		margin-top: 20px;
+	}
 }
 
 #uofc {
@@ -160,7 +175,7 @@ p {
 .people .span4 {
 	height:  280px;
 	display: block;
-	margin-bottom: 80px;
+	margin-bottom: 8g0px;
 }
 
 .people img {
